--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
+    tools:context=".MainActivity"
+    android:orientation="vertical">
+    <include android:id="@+id/toolbar"
+        layout="@layout/primary_toolbar"/>
+    <Button
+        android:id="@+id/botonSalta"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Salta"/>
+    <Button
+        android:id="@+id/botonJujuy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Jujuy"/>
+    <Button
+        android:id="@+id/botonSanLuis"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="San Luis"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
