--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,6 +41,15 @@
         android:textSize="15sp"
         tools:text="contraseña" />
 
+    <CheckBox
+        android:id="@+id/RecordarUsuario"
+        android:drawableStart="@drawable/checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:button="@null"
+        android:text="@string/recordarUsuario"/>
+
     <LinearLayout
         android:weightSum="1"
         android:layout_width="wrap_content"
