--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
-    <include android:id="@+id/toolbar"
-        layout="@layout/primary_toolbar"/>
-    <Button
-        android:id="@+id/botonSalta"
+    android:animationCache="false"
+    android:background="@color/white"
+    android:divider="@android:drawable/bottom_bar"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/primary_toolbar" />
+
+
+    <EditText
+        android:id="@+id/scFilter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Salta"/>
-    <Button
-        android:id="@+id/botonJujuy"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:imeOptions="actionDone"
+        android:hint="Buscar..." />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Jujuy"/>
-    <Button
-        android:id="@+id/botonSanLuis"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="San Luis"/>
+        android:layout_margin="6dp"
+        android:clickable="true"
+        android:clipChildren="false"
+        android:clipToPadding="true" />
 
 
 </LinearLayout>
