--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/item_agregar"
         android:title="Agregar"
         android:icon="@drawable/icon_menu"
         />
+    <item
+        android:id="@+id/item_cerrarSesion"
+        android:title="Cerrar sesion"
+        app:showAsAction="never"
+        android:icon="@mipmap/ic_channel_foreground" />
+
 </menu>
