--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,12 @@
         android:id="@+id/toolbar"
         layout="@layout/primary_toolbar" />
 
+    <TextView
+        android:id="@+id/tvServicio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        tools:background="@color/white" />
 
     <EditText
         android:id="@+id/scFilter"
