--- a/app/src/main/res/layout/activity_provincia.xml
+++ b/app/src/main/res/layout/activity_provincia.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            android:textSize="30sp"
             android:text="TITULO"
             tools:background="@color/white" />
 
