--- a/app/src/main/res/layout/item_provincia.xml
+++ b/app/src/main/res/layout/item_provincia.xml
@@ -8,6 +8,11 @@
     android:gravity="center">
 
 
+    <ImageView
+        android:id="@+id/imagenView"
+        android:layout_width="81dp"
+        android:layout_height="101dp"
+        android:src="@drawable/fondo" />
     <LinearLayout
         android:layout_width="100dp"
         android:layout_height="wrap_content"
@@ -15,29 +20,31 @@
         android:orientation="vertical"
         android:gravity="center">
 
-        
-
         <!-- Elementos en la columna 1 -->
+
         <TextView
 
             android:layout_width="wrap_content"
             android:layout_height="37.5dp"
             android:text="Nombre:"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:gravity="center"/>
 
         <TextView
 
             android:layout_width="wrap_content"
             android:layout_height="37.5dp"
             android:text="Latitud:"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:gravity="center"/>
 
         <TextView
 
             android:layout_width="wrap_content"
             android:layout_height="37.5dp"
             android:text="Longitud:"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:gravity="center"/>
 
     </LinearLayout>
 
@@ -55,21 +62,24 @@
             android:layout_width="wrap_content"
             android:layout_height="37.5dp"
             android:text="Buenos Aires"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/latProvincia"
             android:layout_width="wrap_content"
             android:layout_height="37.5dp"
             android:text="-36.6769415180527"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/lonProvincia"
             android:layout_width="wrap_content"
             android:layout_height="37.5dp"
             android:text="-60.5588319815719"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:gravity="center"/>
 
     </LinearLayout>
 
