--- a/app/src/main/res/layout/activity_departamentos.xml
+++ b/app/src/main/res/layout/activity_departamentos.xml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animationCache="false"
+    android:background="@color/white"
+    android:divider="@android:drawable/bottom_bar"
+    android:orientation="vertical"
     tools:context=".DepartamentosActivity">
-    <androidx.appcompat.widget.Toolbar
+
+    <include
         android:id="@+id/toolbar"
+        layout="@layout/primary_toolbar" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerDepartamentos"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:title="Título de la Pantalla"
-        app:titleTextColor="@android:color/white"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
-    <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="DEPARTAMENTOS:\n"
-        android:textSize="20sp" />
+        android:layout_margin="6dp"
+        android:clickable="true"
+        android:clipChildren="false"
+        android:clipToPadding="true" />
+
     <TextView
-        android:id="@+id/depto"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvServicio"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:textSize="18sp"/>
+        android:padding="10dp"
+        tools:background="@color/white" />
+
 
 </LinearLayout>
