--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/item_agregar"
-        android:title="Agregar"
+        android:id="@+id/item_provincia"
+        android:title="Provincias"
+        android:icon="@drawable/icon_menu"
+        />
+    <item
+        android:id="@+id/item_departamento"
+        android:title="Departamentos"
         android:icon="@drawable/icon_menu"
         />
     <item
